<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="chrismomdjian.student.edu.wagerange.HourlyActivity">

    <EditText
        android:id="@+id/hourlyWageField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hourlyWageField"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="45dp"
        app:layout_constraintHorizontal_bias="0.503" />

    <EditText
        android:id="@+id/hoursPerDayField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hoursPerDayField"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:layout_below="@+id/hourlyWageField"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@+id/hourlyWageField" />

    <EditText
        android:id="@+id/daysEachWeekField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/daysEachWeekField"
        android:inputType="number"
        android:textAlignment="center"
        android:layout_below="@+id/hoursPerDayField"
        android:layout_alignLeft="@+id/hoursPerDayField"
        android:layout_alignStart="@+id/hoursPerDayField"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/hoursPerDayField"
        app:layout_constraintHorizontal_bias="0.503" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/daysEachWeekField"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button"
        android:text="@string/submitButton"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/resultTextView"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daysEachWeekField" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultTextView"
        android:layout_below="@+id/submitButton"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginBottom="98dp" />
</android.support.constraint.ConstraintLayout>
